--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>Examples</RootNamespace>
     <AssemblyName>Examples</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
@@ -54,9 +55,13 @@
     <Compile Include="SplitStyles.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SharpKml\SharpKml.csproj">
-      <Project>{53F12A60-E9CC-44BC-8366-1AE3AB2B547D}</Project>
-      <Name>SharpKml</Name>
+    <ProjectReference Include="..\SharpKml.Kmz\SharpKml.Kmz.csproj">
+      <Project>{029079b8-013e-4422-ab56-6ca90ca9f20e}</Project>
+      <Name>SharpKml.Kmz</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SharpKml\SharpKml.Core.csproj">
+      <Project>{ba1c2e65-51f6-4960-bd72-26e3b95d38d6}</Project>
+      <Name>SharpKml.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
