--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Dom\AtomTest.cs" />
     <Compile Include="Dom\CoordinateCollectionTest.cs" />
     <Compile Include="Dom\ElementTest.cs" />
+    <Compile Include="Dom\ExtendedDataTest.cs" />
     <Compile Include="Dom\IconStyleTest.cs" />
     <Compile Include="Dom\IHtmlContentTest.cs" />
     <Compile Include="Dom\ItemIconTest.cs" />
