--- a/SharpKml/packages.config
+++ b/SharpKml/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="StyleCop.Analyzers" version="1.0.0-rc3" targetFramework="portable40-net40+sl5+win8+wp8+wpa81" developmentDependency="true" />
+  <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
 </packages>
