Moved KmzFile into Core project and deleted Kmz project, as zip handling is now done by the BCL

--- a/SharpKml/SharpKml.Core.csproj
+++ b/SharpKml/SharpKml.Core.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Engine\GeometryExtensions.cs" />
     <Compile Include="Engine\IFileResolver.cs" />
     <Compile Include="Engine\KmlFile.cs" />
+    <Compile Include="Engine\KmzFile.cs" />
     <Compile Include="Engine\LinkResolver.cs" />
     <Compile Include="Engine\StyleResolver.cs" />
     <Compile Include="Engine\UpdateExtensions.cs" />
