--- a/SharpKml/SharpKml.Core.csproj
+++ b/SharpKml/SharpKml.Core.csproj
@@ -1,223 +1,26 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BA1C2E65-51F6-4960-BD72-26E3B95D38D6}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SharpKml</RootNamespace>
-    <AssemblyName>SharpKml</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Profile111</TargetFrameworkProfile>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\SharpKml.xml</DocumentationFile>
-    <CodeAnalysisRuleSet>SharpKml.Core.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\SharpKml.xml</DocumentationFile>
-    <CodeAnalysisRuleSet>SharpKml.Core.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup>
+    <TargetFramework>netstandard1.2</TargetFramework>
     <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\SharpKml.snk</AssemblyOriginatorKeyFile>
+    <Version>3.0.1</Version>
+    <Authors>Samuel Cragg</Authors>
+    <Company />
+    <Description>SharpKML is an implementation of the Open Geospatial Consortium KML 2.2 standard developed in C#, able to read and write KML and KMZ files.</Description>
+    <Copyright>Copyright 2017</Copyright>
+    <PackageTags>KML KMZ</PackageTags>
+    <RepositoryUrl>https://github.com/samcragg/sharpkml</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/samcragg/sharpkml</PackageProjectUrl>
+    <Product>SharpKml.Core</Product>
+    <PackageLicenseUrl>https://github.com/samcragg/sharpkml/blob/master/LICENSE.txt</PackageLicenseUrl>
   </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyOriginatorKeyFile>../SharpKml.snk</AssemblyOriginatorKeyFile>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netstandard1.3\SharpKml.Core.xml</DocumentationFile>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\Release\netstandard1.3\SharpKml.Core.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <!-- A reference to the entire .NET Framework is automatically included -->
-    <Compile Include="Base\Angle.cs" />
-    <Compile Include="Base\Color32.cs" />
-    <Compile Include="Base\ElementEventArgs.cs" />
-    <Compile Include="Base\ElementWalker.cs" />
-    <Compile Include="Base\KmlAttributeAttribute.cs" />
-    <Compile Include="Base\KmlElementAttribute.cs" />
-    <Compile Include="Base\KmlFactory.cs" />
-    <Compile Include="Base\KmlFormatter.cs" />
-    <Compile Include="Base\KmlNamespaces.cs" />
-    <Compile Include="Base\MathHelpers.cs" />
-    <Compile Include="Base\Parser.cs" />
-    <Compile Include="Base\Serializer.cs" />
-    <Compile Include="Base\TypeBrowser.cs" />
-    <Compile Include="Base\ValueConverter.cs" />
-    <Compile Include="Base\Vector.cs" />
-    <Compile Include="Base\XmlComponent.cs" />
-    <Compile Include="Base\XmlExtractor.cs" />
-    <Compile Include="Check.cs" />
-    <Compile Include="Dom\Atom\Author.cs" />
-    <Compile Include="Dom\Atom\Category.cs" />
-    <Compile Include="Dom\Atom\Content.cs" />
-    <Compile Include="Dom\Atom\Entry.cs" />
-    <Compile Include="Dom\Atom\Feed.cs" />
-    <Compile Include="Dom\Atom\Link.cs" />
-    <Compile Include="Dom\Element.cs" />
-    <Compile Include="Dom\Features\AbstractLatLonBox.cs" />
-    <Compile Include="Dom\Features\Container.cs" />
-    <Compile Include="Dom\Features\Data.cs" />
-    <Compile Include="Dom\Features\Description.cs" />
-    <Compile Include="Dom\Features\Document.cs" />
-    <Compile Include="Dom\Features\ExtendedData.cs" />
-    <Compile Include="Dom\Features\Feature.cs" />
-    <Compile Include="Dom\Features\Folder.cs" />
-    <Compile Include="Dom\Features\LatLonAltBox.cs" />
-    <Compile Include="Dom\Features\Lod.cs" />
-    <Compile Include="Dom\Features\NetworkLink.cs" />
-    <Compile Include="Dom\Features\Placemark.cs" />
-    <Compile Include="Dom\Features\Region.cs" />
-    <Compile Include="Dom\Features\Schema.cs" />
-    <Compile Include="Dom\Features\SchemaData.cs" />
-    <Compile Include="Dom\Features\SimpleData.cs" />
-    <Compile Include="Dom\Features\SimpleField.cs" />
-    <Compile Include="Dom\Features\Snippet.cs" />
-    <Compile Include="Dom\Fields\AltitudeMode.cs" />
-    <Compile Include="Dom\Fields\ColorMode.cs" />
-    <Compile Include="Dom\Fields\CoordinateCollection.cs" />
-    <Compile Include="Dom\Fields\DisplayMode.cs" />
-    <Compile Include="Dom\Fields\GridOrigin.cs" />
-    <Compile Include="Dom\Fields\ItemIconStates.cs" />
-    <Compile Include="Dom\Fields\ListItemType.cs" />
-    <Compile Include="Dom\Fields\RefreshMode.cs" />
-    <Compile Include="Dom\Fields\Shape.cs" />
-    <Compile Include="Dom\Fields\StyleState.cs" />
-    <Compile Include="Dom\Fields\Unit.cs" />
-    <Compile Include="Dom\Fields\VectorType.cs" />
-    <Compile Include="Dom\Fields\ViewRefreshMode.cs" />
-    <Compile Include="Dom\Geometries\Alias.cs" />
-    <Compile Include="Dom\Geometries\Geometry.cs" />
-    <Compile Include="Dom\Geometries\InnerBoundary.cs" />
-    <Compile Include="Dom\Geometries\LinearRing.cs" />
-    <Compile Include="Dom\Geometries\LineString.cs" />
-    <Compile Include="Dom\Geometries\Location.cs" />
-    <Compile Include="Dom\Geometries\Model.cs" />
-    <Compile Include="Dom\Geometries\MultipleGeometry.cs" />
-    <Compile Include="Dom\Geometries\Orientation.cs" />
-    <Compile Include="Dom\Geometries\OuterBoundary.cs" />
-    <Compile Include="Dom\Geometries\Point.cs" />
-    <Compile Include="Dom\Geometries\Polygon.cs" />
-    <Compile Include="Dom\Geometries\ResourceMap.cs" />
-    <Compile Include="Dom\Geometries\Scale.cs" />
-    <Compile Include="Dom\GX\AltitudeMode.cs" />
-    <Compile Include="Dom\GX\AnimatedUpdate.cs" />
-    <Compile Include="Dom\GX\FlyTo.cs" />
-    <Compile Include="Dom\GX\FlyToMode.cs" />
-    <Compile Include="Dom\GX\LatLonQuad.cs" />
-    <Compile Include="Dom\GX\MultipleTrack.cs" />
-    <Compile Include="Dom\GX\Option.cs" />
-    <Compile Include="Dom\GX\Playlist.cs" />
-    <Compile Include="Dom\GX\PlayMode.cs" />
-    <Compile Include="Dom\GX\SimpleArrayData.cs" />
-    <Compile Include="Dom\GX\SimpleArrayField.cs" />
-    <Compile Include="Dom\GX\SoundCue.cs" />
-    <Compile Include="Dom\GX\TimeSpan.cs" />
-    <Compile Include="Dom\GX\Timestamp.cs" />
-    <Compile Include="Dom\GX\Tour.cs" />
-    <Compile Include="Dom\GX\TourControl.cs" />
-    <Compile Include="Dom\GX\TourPrimitive.cs" />
-    <Compile Include="Dom\GX\Track.cs" />
-    <Compile Include="Dom\GX\Wait.cs" />
-    <Compile Include="Dom\IBoundsInformation.cs" />
-    <Compile Include="Dom\ICustomElement.cs" />
-    <Compile Include="Dom\IHtmlContent.cs" />
-    <Compile Include="Dom\Kml.cs" />
-    <Compile Include="Dom\KmlObject.cs" />
-    <Compile Include="Dom\Links\ChangeCollection.cs" />
-    <Compile Include="Dom\Links\CreateCollection.cs" />
-    <Compile Include="Dom\Links\DeleteCollection.cs" />
-    <Compile Include="Dom\Links\Icon.cs" />
-    <Compile Include="Dom\Links\Link.cs" />
-    <Compile Include="Dom\Links\LinkSnippet.cs" />
-    <Compile Include="Dom\Links\LinkType.cs" />
-    <Compile Include="Dom\Links\NetworkLinkControl.cs" />
-    <Compile Include="Dom\Links\Update.cs" />
-    <Compile Include="Dom\Overlays\GroundOverlay.cs" />
-    <Compile Include="Dom\Overlays\ImagePyramid.cs" />
-    <Compile Include="Dom\Overlays\LatLonBox.cs" />
-    <Compile Include="Dom\Overlays\Overlay.cs" />
-    <Compile Include="Dom\Overlays\OverlayVector.cs" />
-    <Compile Include="Dom\Overlays\PhotoOverlay.cs" />
-    <Compile Include="Dom\Overlays\RotationVector.cs" />
-    <Compile Include="Dom\Overlays\ScreenOverlay.cs" />
-    <Compile Include="Dom\Overlays\ScreenVector.cs" />
-    <Compile Include="Dom\Overlays\SizeVector.cs" />
-    <Compile Include="Dom\Overlays\ViewVolume.cs" />
-    <Compile Include="Dom\Styles\BalloonStyle.cs" />
-    <Compile Include="Dom\Styles\BasicLink.cs" />
-    <Compile Include="Dom\Styles\ColorStyle.cs" />
-    <Compile Include="Dom\Styles\Hotspot.cs" />
-    <Compile Include="Dom\Styles\IconStyle.cs" />
-    <Compile Include="Dom\Styles\ItemIcon.cs" />
-    <Compile Include="Dom\Styles\LabelStyle.cs" />
-    <Compile Include="Dom\Styles\LineStyle.cs" />
-    <Compile Include="Dom\Styles\ListStyle.cs" />
-    <Compile Include="Dom\Styles\Pair.cs" />
-    <Compile Include="Dom\Styles\PolygonStyle.cs" />
-    <Compile Include="Dom\Styles\Style.cs" />
-    <Compile Include="Dom\Styles\StyleMapCollection.cs" />
-    <Compile Include="Dom\Styles\StyleSelector.cs" />
-    <Compile Include="Dom\Styles\SubStyle.cs" />
-    <Compile Include="Dom\Time\TimePrimitive.cs" />
-    <Compile Include="Dom\Time\TimeSpan.cs" />
-    <Compile Include="Dom\Time\Timestamp.cs" />
-    <Compile Include="Dom\UnknownElement.cs" />
-    <Compile Include="Dom\Url.cs" />
-    <Compile Include="Dom\Views\AbstractView.cs" />
-    <Compile Include="Dom\Views\Camera.cs" />
-    <Compile Include="Dom\Views\LookAt.cs" />
-    <Compile Include="Dom\Xal\AddressDetails.cs" />
-    <Compile Include="Dom\Xal\AdministrativeArea.cs" />
-    <Compile Include="Dom\Xal\Country.cs" />
-    <Compile Include="Dom\Xal\Locality.cs" />
-    <Compile Include="Dom\Xal\PostalCode.cs" />
-    <Compile Include="Dom\Xal\SubAdministrativeArea.cs" />
-    <Compile Include="Dom\Xal\Thoroughfare.cs" />
-    <Compile Include="Engine\BoundingBox.cs" />
-    <Compile Include="Engine\ElementExtensions.cs" />
-    <Compile Include="Engine\EntityMapper.cs" />
-    <Compile Include="Engine\FeatureExtensions.cs" />
-    <Compile Include="Engine\GeometryExtensions.cs" />
-    <Compile Include="Engine\IFileResolver.cs" />
-    <Compile Include="Engine\KmlFile.cs" />
-    <Compile Include="Engine\KmzFile.cs" />
-    <Compile Include="Engine\LinkResolver.cs" />
-    <Compile Include="Engine\StyleResolver.cs" />
-    <Compile Include="Engine\UpdateExtensions.cs" />
-    <Compile Include="Engine\UriExtensions.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" PrivateAssets="All" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-    <None Include="SharpKml.Core.nuspec" />
-    <None Include="SharpKml.Core.ruleset" />
-  </ItemGroup>
-  <ItemGroup>
-    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.0\analyzers\dotnet\cs\Newtonsoft.Json.dll" />
-    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.0\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
-    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.0\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
-  </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
