--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -1,144 +1,28 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{B8E1EC2A-64F4-4DCB-85EF-B1D65B42C4AB}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UnitTests</RootNamespace>
-    <AssemblyName>UnitTests</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
-  <PropertyGroup>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\SharpKml.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyOriginatorKeyFile>../SharpKml.snk</AssemblyOriginatorKeyFile>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="nunit.framework, Version=3.4.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.4.1\lib\net45\nunit.framework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.XML" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Base\Color32Test.cs" />
-    <Compile Include="Base\ElementWalkerTest.cs" />
-    <Compile Include="Base\KmlFactoryTest.cs" />
-    <Compile Include="Base\KmlFormatterTest.cs" />
-    <Compile Include="Base\MathHelpersTest.cs" />
-    <Compile Include="Base\ParserTest.cs" />
-    <Compile Include="Base\SerializerTest.cs" />
-    <Compile Include="Base\TypeBrowserTest.cs" />
-    <Compile Include="Base\ValueConverterTest.cs" />
-    <Compile Include="Base\VectorTest.cs" />
-    <Compile Include="Base\XmlComponentTest.cs" />
-    <Compile Include="Base\XmlExtractorTest.cs" />
-    <Compile Include="Dom\AtomTest.cs" />
-    <Compile Include="Dom\CoordinateCollectionTest.cs" />
-    <Compile Include="Dom\ElementTest.cs" />
-    <Compile Include="Dom\ExtendedDataTest.cs" />
-    <Compile Include="Dom\IconStyleTest.cs" />
-    <Compile Include="Dom\IHtmlContentTest.cs" />
-    <Compile Include="Dom\ItemIconTest.cs" />
-    <Compile Include="Dom\LatLonAltBoxTest.cs" />
-    <Compile Include="Dom\PointTest.cs" />
-    <Compile Include="Engine\BoundingBoxTest.cs" />
-    <Compile Include="Engine\ElementExtensionsTest.cs" />
-    <Compile Include="Engine\EntityMapperTest.cs" />
-    <Compile Include="Engine\FeatureExtensionsTest.cs" />
-    <Compile Include="Engine\KmlFileTest.cs" />
-    <Compile Include="Engine\KmzFileTest.cs" />
-    <Compile Include="Engine\LinkResolverTest.cs" />
-    <Compile Include="Engine\StyleResolverTest.cs" />
-    <Compile Include="Engine\UpdateExtensionsTest.cs" />
-    <Compile Include="Engine\UriExtensionsTest.cs" />
-    <Compile Include="PartialTrustTest.cs" />
-    <Compile Include="PartialTrustTestHelper.cs" />
-    <Compile Include="SampleData.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Engine\Data\Entities.kml" />
-    <EmbeddedResource Include="Engine\Data\Entity Data.kml" />
-    <EmbeddedResource Include="Engine\Data\Schema Data.kml" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Engine\Data\Style Data.kml" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Engine\Data\Style Output.kml" />
-  </ItemGroup>
+  
   <ItemGroup>
     <EmbeddedResource Include="Engine\Data\Bounds.kml" />
-  </ItemGroup>
-  <ItemGroup>
+    <EmbeddedResource Include="Engine\Data\Doc.kmz" />
+    <EmbeddedResource Include="Engine\Data\Entities.kml" />
+    <EmbeddedResource Include="Engine\Data\Entity Data.kml" />
+    <EmbeddedResource Include="Engine\Data\Links.kml" />
+    <EmbeddedResource Include="Engine\Data\MultiKml.kmz" />
+    <EmbeddedResource Include="Engine\Data\NoKml.kmz" />
+    <EmbeddedResource Include="Engine\Data\Schema Data.kml" />
+    <EmbeddedResource Include="Engine\Data\Style Data.kml" />
+    <EmbeddedResource Include="Engine\Data\Style Output.kml" />
     <EmbeddedResource Include="Engine\Data\Update.kml" />
   </ItemGroup>
+
   <ItemGroup>
-    <EmbeddedResource Include="Engine\Data\Links.kml" />
+    <ProjectReference Include="..\SharpKml\SharpKml.Core.csproj" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
+    <PackageReference Include="NUnit" Version="3.8.1" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.9.0" />
   </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Engine\Data\Doc.kmz" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Engine\Data\NoKml.kmz" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Engine\Data\MultiKml.kmz" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Properties\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SharpKml\SharpKml.Core.csproj">
-      <Project>{ba1c2e65-51f6-4960-bd72-26e3b95d38d6}</Project>
-      <Name>SharpKml.Core</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
