New Example : ExtendKml

--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Clone.cs" />
     <Compile Include="CreateKmz.cs" />
     <Compile Include="CreateIconStyle.cs" />
+    <Compile Include="ExtendKml.cs" />
     <Compile Include="InlineStyles.cs" />
     <Compile Include="ShowStyles.cs" />
     <Compile Include="SortPlacemarks.cs" />
