--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,4 +5,5 @@ pool:
   vmImage: 'VS2017-Win2016'
 
 steps:
-- powershell: ./build/build.ps1
+- powershell: build.ps1
+  workingDirectory: $(Build.SourcesDirectory)/build
