--- a/SharpKml/SharpKml.Core.csproj
+++ b/SharpKml/SharpKml.Core.csproj
@@ -18,7 +18,15 @@
     <PackageProjectUrl>https://github.com/samcragg/sharpkml</PackageProjectUrl>
     <Product>SharpKml.Core</Product>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8" PrivateAssets="All" />
